fix overflow problem

--- a/popup.css
+++ b/popup.css
@@ -143,7 +143,8 @@ h2 {
   max-height: 500px;
   transition: max-height 0.5s ease-in;
   display: block;
-  overflow: scroll;
+  overflow-y: scroll;
+  scrollbar-width: thin;
 }
 
 /* Robots.txt display */
